# agentrag

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
agentrag/: __init__.py  config.py
agentrag/agent/: graph.py  prompts.py  runner.py
agentrag/api/: app.py
agentrag/cli/: main.py
agentrag/mcp_servers/: config.json
agentrag/mcp_servers/code_index/: server.py
agentrag/mcp_servers/docs_rag/: server.py
agentrag/mcp_servers/memory/: server.py
agentrag/mcp_servers/web_search/: server.py
agentrag/storage/: chroma.py
agentrag/ui/: app.py
docs/: architecture.html
