[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrag"
version = "0.1.0"
description = "Multi-Source Agentic RAG with MCP — CLI + API + Web UI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Luo Yu", email = "rainy1024@example.com" },
]
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "click>=8.1",
    "qdrant-client>=1.12",
    "duckduckgo-search>=7.0",
    "pydantic-settings>=2.6",
    "streamlit>=1.40",
    "httpx>=0.28",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
agentrag = "agentrag.cli.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100
